# agentic-ai-crm

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/crud/: __init__.py  hcp.py  interaction.py
backend/app/models/: __init__.py  hcp.py  interaction.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  hcp.py  health.py  interaction.py
backend/app/schemas/: __init__.py  auth.py  hcp.py  interaction.py
backend/app/services/: __init__.py  groq_service.py  interaction_service.py
backend/app/tools/: __init__.py  edit_interaction.py  find_hcp.py  followup_suggestion.py  interaction_history.py  log_interaction.py
frontend/: .dockerignore  .env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: hook.ts  store.ts
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/common/: SentimentSelector.tsx  SuccessToast.tsx
frontend/src/components/forms/: HCPSelector.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Modal.tsx
frontend/src/pages/: InteractionHistory.tsx  LogInteraction.tsx
frontend/src/services/: api.ts  auth.ts  chat.ts  hcp.ts  interaction.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
(+5 files in other folders)
