[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-crm-hcp-backend"
version = "1.0.0"
description = "AI-First CRM HCP Module — FastAPI + LangGraph backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "langgraph==0.2.60",
    "langchain-core==0.3.25",
    "langchain-groq==0.2.3",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
